     use of `struct timeval={-1,-1}` as a trigger to `select(..., NULL)`,
     as logged in one part of code and not handled in the other, for the
     indefinite wait [#1922, #2392, #2686, #2670]
   * The `disable_fix_report_desc` option introduced for `usbhid-ups` driver
     since NUT v2.8.1 was not applied for early dialog with the device while
     its report descriptors were being discovered. [#1575, #1512]

 - development iterations of NUT should now identify with not only the semantic
   version of a preceding release, but with git-derived information about the
   amount of iterations that followed (if available): the three-number "semver"
   would be seen on release snapshots, while other builds would expose the
   added components: one with the amount of commits on the main development
   trunk since the preceding release which are ancestors of the built code
   base, and in case of feature development branches -- another component
   with the amount of commits unique to this branch (which are not part of
   the development trunk). This allows to produce more relevant (monotonously
   growing) version identifiers for packages and similar artifacts, with more
   meaningful upgrades via development snapshots, eventually. A copy of the
   current version information would be embedded into "dist" archives as a
   `VERSION_DEFAULT` file. [#1949]

 - the `upsnotify()` common code introduced in recent NUT releases (integrating
   with service management frameworks, etc.) was a bit cryptic when it reported
   a *failure to notify* (e.g. when not running as a service currently), fixed
   now to report human-friendly text instead of internal enum codes. Follow-up
   to [issue #1590, PR #1777, PR #2136]

 - drivers, `upsd`, `upsmon`: reduce "scary noise" about failure to `fopen()`
   the PID file (which most of the time means that no previous instance of
   the daemon was running to potentially conflict with), especially useless