@@ -79,7 +79,9 @@ https://github.com/networkupstools/nut/milestone/11
      indefinite wait [#1922, #2392, #2686, #2670]
    * The `disable_fix_report_desc` option introduced for `usbhid-ups` driver
      since NUT v2.8.1 was not applied for early dialog with the device while
-     its report descriptors were being discovered. [#1575, #1512]
+     its report descriptors were being discovered. Now this flag, as well as
+     `interruptsize` and `interruptonly`, are considered before we first try
+     to open the USB device handle. [#1575, #1512]
 
  - development iterations of NUT should now identify with not only the semantic
    version of a preceding release, but with git-derived information about the
